crates/crucible-cli/src/tui/testing/snapshots/crucible_cli__tui__testing__popup_snapshot_tests__snapshots__popup_command_minimal.snap
---
source: crates/crucible-cli/src/tui/testing/popup_snapshot_tests.rs
expression: h.render()
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
┌Select────────────────────────────────────────────────────────────────────────┐
│> /search Search notes                                                        │
│/help Show help                                                               │
└──────────────────────────────────────────────────────────────────────────────┘
                                                                                
 >                                                                              
                                                                                
▸ Plan │ Ready
