crates/crucible-cli/src/tui/testing/snapshots/crucible_cli__tui__testing__popup_snapshot_tests__snapshots__popup_command_open.snap
---
source: crates/crucible-cli/src/tui/testing/popup_snapshot_tests.rs
expression: h.render()
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
┌Select────────────────────────────────────────────────────────────────────────┐
│> /search Search notes semantically                                           │
│/new Start new session                                                        │
│/clear Clear conversation context                                             │
│/help Show available commands                                                 │
│/mode Switch session mode                                                     │
└──────────────────────────────────────────────────────────────────────────────┘
                                                                                
 >                                                                              
                                                                                
▸ Plan │ Ready
