crates/crucible-cli/src/tui/testing/snapshots/crucible_cli__tui__testing__popup_snapshot_tests__snapshots__popup_file_list.snap
---
source: crates/crucible-cli/src/tui/testing/popup_snapshot_tests.rs
expression: h.render()
---
                                                                                
                                                                                
> [file] src/main.rs workspace                                                  
  [file] src/lib.rs workspace                                                   
  [file] Cargo.toml workspace                                                   
  [file] README.md workspace                                                    
                                                                                
 >                                                                              
                                                                                
▸ Plan │ ollama/llama3.2 │ Ready
