crates/crucible-cli/src/tui/testing/snapshots/crucible_cli__tui__testing__popup_snapshot_tests__snapshots__popup_note_list.snap
---
source: crates/crucible-cli/src/tui/testing/popup_snapshot_tests.rs
expression: h.render()
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
┌Select────────────────────────────────────────────────────────────────────────┐
│> [note] note:Projects/Crucible note                                          │
│[note] note:Ideas/Backlog note                                                │
│[note] note:Meta/Roadmap note                                                 │
└──────────────────────────────────────────────────────────────────────────────┘
                                                                                
 >                                                                              
                                                                                
▸ Plan │ Ready
