crates/crucible-cli/src/tui/testing/snapshots/crucible_cli__tui__testing__popup_snapshot_tests__snapshots__popup_repl_commands.snap
---
source: crates/crucible-cli/src/tui/testing/popup_snapshot_tests.rs
expression: h.render()
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
┌Select────────────────────────────────────────────────────────────────────────┐
│> : quit Exit the application                                                 │
│  : help Show keybindings and commands                                        │
│  : mode Cycle session mode                                                   │
│  : agent Switch agent backend                                                │
│  : models List available models                                              │
└──────────────────────────────────────────────────────────────────────────────┘
                                                                                
 :                                                                              
                                                                                
▸ Plan │ Ready
