crates/crucible-cli/src/tui/testing/snapshots/crucible_cli__tui__testing__popup_snapshot_tests__snapshots__popup_scrolled_down.snap
---
source: crates/crucible-cli/src/tui/testing/popup_snapshot_tests.rs
expression: h.render()
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
┌Select────────────────────────────────────────────────────────────────────────┐
│[cmd] /command0 Description for command 0                                     │
│[cmd] /command1 Description for command 1                                     │
│[cmd] /command2 Description for command 2                                     │
│[cmd] /command3 Description for command 3                                     │
│[cmd] /command4 Description for command 4                                     │
└──────────────────────────────────────────────────────────────────────────────┘
                                                                                
 >                                                                              
                                                                                
▸ Plan │ Ready
